# TestLanguages

./: 01.srt
Hare/: Hare  main.ha
Lisp/: learn.txt
Lisp/Basic/: app.lsp  compiling.txt  main.lsp
assembly/helloWorld/: a.out  hello.s
clang/: main  main.cpp
ocaml/helloworld/_build/: .db  .digest-db  log
ocaml/helloworld/_build/default/.dune/: configurator  configurator.v2
ocaml/helloworld/_build/default/lib/: helloworld.cmxs
ocaml/helloworld/_build/default/lib/.helloworld.objs/byte/: helloworld.cmt
ocaml/helloworld/_build/default/lib/.merlin-conf/: lib-helloworld
ocaml/helloworld/_build/default/test/.helloworld.eobjs/byte/: dune__exe__Helloworld.cmti
ocaml/helloworld/_build/default/test/.merlin-conf/: exe-helloworld
pascal/: main  main.pas
rustTest/src/: main.rs
rust_Test/: Cargo.toml
rust_test/: Cargo.toml
rust_test/src/: main.rs
scheme/: Test.scm  app.scm  compile_Command.txt
